--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.7.4",
+    "astro-compressor": "^1.0.0",
+    "astro-robots-txt": "^1.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.4"
