--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^5.7.4",
     "astro-compressor": "^1.0.0",
     "astro-robots-txt": "^1.0.0",
+    "lucide-react": "^0.503.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.4"
